--- a/templates/admin.html
+++ b/templates/admin.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <header>
-        <h1>Admin Panel</h1>
+        <div class="header-content">
+            <img src="/static/c150lion1.png" alt="C150 Lion" class="header-lion left">
+            <h1>Admin Panel</h1>
+            <img src="/static/c150lion1.png" alt="C150 Lion" class="header-lion right">
+        </div>
     </header>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
